--- a/03 - C# Advanced/01.Stacks And Queues/StacksAndQueues/05.SequenceWithQueue/05.SequenceWithQueue.csproj
+++ b/03 - C# Advanced/01.Stacks And Queues/StacksAndQueues/05.SequenceWithQueue/05.SequenceWithQueue.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7DCF688F-440D-4C7D-9EB0-027A2B512CA4}</ProjectGuid>
+    <ProjectGuid>{EEB18229-B97D-40F6-8DCE-5371987DB2D0}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03.MaximumElement</RootNamespace>
-    <AssemblyName>03.MaximumElement</AssemblyName>
+    <RootNamespace>_05.SequenceWithQueue</RootNamespace>
+    <AssemblyName>05.SequenceWithQueue</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="03.MaximumElement.cs" />
+    <Compile Include="05.SequenceWithQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
